<resources>
    <string name="app_name">PrimerTarea</string>
    <string name="datosIncompletos">Debes llenar todos los campos</string>
    <string name="sEditTextNombre">Nombre completo:</string>
    <string name="sEditTextTelefono">Teléfono:</string>
    <string name="sEditTextEmail">Email:</string>
    <string name="sTituloCalendario">Fecha de nacimiento:</string>
    <string name="sEditTextDescripcion">Descripción:</string>
    <string name="sToolbar">Mis contactos</string>
    <string name="sToolbarInfoContacto">Información</string>
    <string name="main1Encabezado">Registro de contacto</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="main2Encabezado">Confirmar Datos</string>
    <string name="botonEditarDatos">Editar Datos</string>
    <string name="botonEliminarContacto">Eliminar contacto</string>
    <string name="prohibidoSalir">Saldrás de la app</string>
    <string name="snackBarSalir">¿Deseas Salir?</string>
    <string name="salir">Salir.</string>
    <string name="botonAgregar">Agregar contacto</string>
    <string name="menuAbouts1">Acerca de...</string>
    <string name="menuAlterarContactoS1">Editar contacto.</string>
    <string name="menuAlterarContactoS2">Eliminar contacto.</string>
    <string name="ToastAbout">Aplicación creada por Alonzo Estévez</string>
    <string name="menuAbouts2">Settings.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>