<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageInfoContacto"
        android:layout_width="@dimen/ImageViewFotoContactoWidth"
        android:layout_height="@dimen/ImageViewFotoContactoHeight"
        android:src="@drawable/ic_fotouniversal"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"/>
    <TextView
        android:id="@+id/textViewNombreInfoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Textos"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"/>
    <TextView
        android:id="@+id/textViewTelefonoInfoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sEditTextTelefono"
        android:theme="@style/Textos"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"
        />
    <TextView
        android:id="@+id/textViewEmailInfoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sEditTextEmail"
        android:theme="@style/Textos"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"/>
    <TextView
        android:id="@+id/textViewFechaNacimientoInfoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sTituloCalendario"
        android:theme="@style/Textos"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"/>
    <TextView
        android:id="@+id/textViewDetallesInfoContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sEditTextDescripcion"
        android:theme="@style/Textos"
        android:layout_marginBottom="@dimen/marginBottomInfoContacto"/>
    <Button
        android:id="@+id/botonEditarDatosInfoContacto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/formbuttons"
        android:layout_marginTop="40dp"
        android:text="@string/botonEditarDatos"
        android:theme="@style/MiBotonRaised"
        />
    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:theme="@style/MiBotonRaised"
        android:text="@string/botonEliminarContacto"
        android:background="@drawable/formbuttons"
        android:layout_marginTop="50dp"
        ></Button>
</LinearLayout>
