<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos">
    <LinearLayout
        android:id="@+id/verticalView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Encabezados"
            android:text="@string/main2Encabezado"

            >
        </TextView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp">

        </Space>
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Textos"
            android:text="@string/sEditTextNombre"
            android:textAlignment="center">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </Space>
        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:theme="@style/Textos"
            android:text="@string/sTituloCalendario">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </Space>
        <TextView
            android:id="@+id/textViewPhone"
            android:text="@string/sEditTextTelefono"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:theme="@style/Textos">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </Space>
        <TextView
            android:id="@+id/textViewEmail"
            android:text="@string/sEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:theme="@style/Textos">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </Space>
        <TextView
            android:id="@+id/textViewDetails"
            android:text="@string/sEditTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:theme="@style/Textos">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/botonEditarDatos"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/botonEditarDatos"
                android:background="@drawable/formbuttons"
                android:theme="@style/MiBotonRaised">

            </Button>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>