<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/MiBotonRaised"
    tools:context=".FormularioContacto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="125dp"
            android:clickable="true">

            <TextView
                android:id="@+id/encabezado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Encabezados"
                android:text="@string/main1Encabezado"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                >

            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </Space>

            <EditText
                android:id="@+id/editTextName"
                android:ems="10"
                android:layout_width="@dimen/CamposFormularioWidth"
                android:layout_height="@dimen/CamposFormularioHeight"
                android:background="@drawable/custom_input"
                android:theme="@style/editText"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/sEditTextNombre"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </Space>

            <TextView
                android:id="@+id/calendarioTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Textos"
                android:hint="@string/sTituloCalendario"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <DatePicker
                    android:id="@+id/datePicker"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </DatePicker>

            </LinearLayout>



            <EditText
                android:layout_width="@dimen/CamposFormularioWidth"
                android:layout_height="@dimen/CamposFormularioHeight"
                android:id="@+id/editTextPhone"
                android:ems="10"
                android:theme="@style/editText"
                android:hint="@string/sEditTextTelefono"
                android:drawableStart="@drawable/ic_phone"
                android:inputType="number"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_input">

            </EditText>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </Space>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="@dimen/CamposFormularioWidth"
                android:layout_height="@dimen/CamposFormularioHeight"
                android:theme="@style/editText"
                android:hint="@string/sEditTextEmail"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/ic_email"
                android:background="@drawable/custom_input">

            </EditText>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </Space>

            <EditText
                android:id="@+id/editTextDetails"
                android:layout_width="@dimen/CamposFormularioWidth"
                android:layout_height="@dimen/CamposFormularioHeight"
                android:hint="@string/sEditTextDescripcion"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:theme="@style/editText"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_pencil">


            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp">

            </Space>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/botonSiguiente"
                android:textAlignment="center"
                android:theme="@style/MiBotonRaised"
                android:background="@drawable/formbuttons"
                android:onClick="comprobarCampos">
            </Button>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



